--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
   </head>
   <body>
     <h1>Seogwipo</h1>
+    <footer>
+      This project was coded by Brooklyn Van Bebber and is
+      <a href="https://github.com/ANurfHerder/travel-project">open source.</a>
+    </footer>
   </body>
 </html>
