--- a/index.html
+++ b/index.html
@@ -18,10 +18,18 @@
     />
   </head>
   <body>
-    <h1>Seogwipo</h1>
-    <footer>
-      This project was coded by Brooklyn Van Bebber and is
-      <a href="https://github.com/ANurfHerder/travel-project">open source.</a>
-    </footer>
+    <div class="container">
+      <header>
+        <h3>Journey to</h3>
+        <h1>Seogwipo</h1>
+        <h2>Second largest city on Jeju Island</h2>
+        <a href="#">Learn More</a>
+      </header>
+
+      <footer>
+        This project was coded by Brooklyn Van Bebber and is
+        <a href="https://github.com/ANurfHerder/travel-project">open source.</a>
+      </footer>
+    </div>
   </body>
 </html>
