Added Footer + CSS grid

--- a/index.html
+++ b/index.html
@@ -25,10 +25,53 @@
         <h2>Second largest city on Jeju Island</h2>
         <a href="#">Learn More</a>
       </header>
-
       <footer>
-        This project was coded by Brooklyn Van Bebber and is
-        <a href="https://github.com/ANurfHerder/travel-project">open source.</a>
+        <section class="grid">
+          <div>
+            <h3>More about Seogwipo</h3>
+            <ul>
+              <li>
+                <a
+                  href="https://www.airport.co.kr/jeju/index.do"
+                  target="_blank"
+                  >Jeju Island Airport Website</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://wanderlog.com/list/geoMap/285/seogwipo-map"
+                  target="_blank"
+                  >Map of Seogwipo</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://m.visitjeju.net/en/themtour/view?contentsid=CNTS_200000000012534"
+                  target="_blank"
+                  >Public Transport map</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>About Me</h3>
+            <p>
+              Hi! My name is Brooklyn and I have always wanted to travel to
+              South Korea. I found Seju Island to be a dream visit and descoverd
+              the city of Seogwipo in my search. I created this page as part of
+              a project for SheCodes Responsive to develop my coding skills.
+            </p>
+          </div>
+          <div>
+            <h3>About this website</h3>
+            <p>
+              This project was coded by Brooklyn Van Bebber and is
+              <a href="https://github.com/ANurfHerder/travel-project"
+                >open source.</a
+              >
+            </p>
+          </div>
+        </section>
       </footer>
     </div>
   </body>
