added main section + responsive CSS

--- a/index.html
+++ b/index.html
@@ -25,8 +25,32 @@
         <h2>Second largest city on Jeju Island</h2>
         <a href="#">Learn More</a>
       </header>
+      <main>
+        <section class="grid grid-2-columns">
+          <div>
+            <img src="../images/seo-3.avif" alt="" class="img-responsive" />
+          </div>
+          <div>
+            <h2>Seogwipo, the city on the volcanic coast</h2>
+            <h3>Why Seogwipo?</h3>
+            <p>
+              Seogwipo is known for its delicious cuisines in its coastal town.
+              As it takes you across the verdant forests and dramatic volcanic
+              landscapes. It is home to three awe inspiring waterfalls, plus a
+              stunning coastline filled with rocky coves and bathing pools.
+            </p>
+            <p>
+              The Seogwipo coast is always busy with fishing boats and is
+              adorned with majestic trees. The inner harbor is a favored
+              location for capturing sea bream and groupers. You have the
+              opportunity to embark on a daytime open-sea fishing excursion by
+              boarding a boat from the port.
+            </p>
+          </div>
+        </section>
+      </main>
       <footer>
-        <section class="grid">
+        <section class="grid grid-3-columns-1-narrow">
           <div>
             <h3>More about Seogwipo</h3>
             <ul>
