added location cards - responsive

--- a/index.html
+++ b/index.html
@@ -48,6 +48,126 @@
             </p>
           </div>
         </section>
+
+        <section class="secondary">
+          <h2 class="text-center">Locations</h2>
+          <h3 class="text-center">My favorite spots</h3>
+
+          <!-- cards -->
+          <div class="grid grid-3-columns">
+            <div class="card">
+              <div class="grid grid-pics">
+                <div>
+                  <img
+                    src="../images/bookstore.PNG"
+                    alt=""
+                    class="img-responsive grid-pic-height"
+                  />
+                </div>
+                <div>
+                  <img
+                    src="../images/usaengdang.PNG"
+                    alt=""
+                    class="img-responsive grid-pic-height"
+                  />
+                </div>
+              </div>
+              <div class="card-body">
+                <h4>Usaengdang</h4>
+                <p class="sub-title">우생당</p>
+                <p>A playfull yet sleek bookstore with music as well!</p>
+                <h5>Address:</h5>
+                <p>104 중앙로 특별자치도 Seogwipo-si, Jeju-do, South Korea</p>
+                <h5>What I like about it:</h5>
+                <p>
+                  I like that it hold a variety of books and most importantly
+                  has plenty of parking!
+                </p>
+                <a
+                  href="https://maps.app.goo.gl/9GHUKoCnApMHegANA"
+                  target="_blank"
+                  class="button"
+                  >Learn More</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="grid grid-pics">
+                <div>
+                  <img
+                    src="../images/cafe.PNG"
+                    alt=""
+                    class="img-responsive grid-pic-height"
+                  />
+                </div>
+                <div>
+                  <img
+                    src="../images/cafe-map.PNG"
+                    alt=""
+                    class="img-responsive grid-pic-height"
+                  />
+                </div>
+              </div>
+              <div class="card-body">
+                <h4>Honeymoon House</h4>
+                <p class="sub-title">허니문하우스</p>
+                <p>A playfull yet sleek bookstore with music as well!</p>
+                <h5>Address:</h5>
+                <p>
+                  228-13 Chilsimni-ro, Topyeong-dong, Seogwipo-si, Jeju-do,
+                  South Korea
+                </p>
+                <h5>What I like about it:</h5>
+                <p>
+                  The food here is not only good tasting, but visually striking
+                  as well!
+                </p>
+                <a
+                  href="https://maps.app.goo.gl/w5SMRNgWdG7n7rWL6"
+                  target="_blank"
+                  class="button"
+                  >Learn More</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="grid grid-pics">
+                <div>
+                  <img
+                    src="../images/trail.PNG"
+                    alt=""
+                    class="img-responsive grid-pic-height"
+                  />
+                </div>
+                <div>
+                  <img
+                    src="../images/trail-map.PNG"
+                    alt=""
+                    class="img-responsive grid-pic-height"
+                  />
+                </div>
+              </div>
+              <div class="card-body">
+                <h4>Jeju Olle Trail</h4>
+                <p class="sub-title">올레길 6코스</p>
+                <p>A visually stunning hike along the coast of Seogwipo.</p>
+                <h5>Address:</h5>
+                <p>Chilsimni-ro, Seogwipo-si, Jeju-do, South Korea</p>
+                <h5>What I like about it:</h5>
+                <p>
+                  The fresh air coming from the water makes this trail the
+                  perfect place to relax and absorb the positive energy.
+                </p>
+                <a
+                  href="https://maps.app.goo.gl/5DPofZZfs9Wqz7aq5"
+                  target="_blank"
+                  class="button"
+                  >Learn More</a
+                >
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
       <footer>
         <section class="grid grid-3-columns-1-narrow">
