fixed description for honeymoon cafe

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <div class="card-body">
                 <h4>Honeymoon House</h4>
                 <p class="sub-title">허니문하우스</p>
-                <p>A playfull yet sleek bookstore with music as well!</p>
+                <p>Make a sweet or savory stop at this zesty cafe.</p>
                 <h5>Address:</h5>
                 <p>
                   228-13 Chilsimni-ro, Topyeong-dong, Seogwipo-si, Jeju-do,
