added google maps embed + made responsive

--- a/index.html
+++ b/index.html
@@ -57,20 +57,19 @@
           <div class="grid grid-3-columns">
             <div class="card">
               <div class="grid grid-pics">
-                <div>
-                  <img
-                    src="../images/bookstore.PNG"
-                    alt=""
-                    class="img-responsive grid-pic-height"
-                  />
-                </div>
-                <div>
-                  <img
-                    src="../images/usaengdang.PNG"
-                    alt=""
-                    class="img-responsive grid-pic-height"
-                  />
-                </div>
+                <img
+                  src="../images/bookstore.PNG"
+                  alt="Inside of Usaengdang Book store"
+                  class="img-responsive grid-pic-height"
+                />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13345.909082202756!2d126.5511862!3d33.2539954!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x350c539e75dc34a9%3A0xf60932518f7b05e5!2sUsaengdang!5e0!3m2!1sen!2sus!4v1700092746854!5m2!1sen!2sus"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Usaengdang</h4>
@@ -101,11 +100,14 @@
                   />
                 </div>
                 <div>
-                  <img
-                    src="../images/cafe-map.PNG"
-                    alt=""
-                    class="img-responsive grid-pic-height"
-                  />
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6673.647487077288!2d126.574851!3d33.2449207!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x350c53e24f431ded%3A0x16363216cfbb103!2sHoneymoon%20House!5e0!3m2!1sen!2sus!4v1700093188210!5m2!1sen!2sus"
+                    class="embed"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
                 </div>
               </div>
               <div class="card-body">
@@ -140,11 +142,14 @@
                   />
                 </div>
                 <div>
-                  <img
-                    src="../images/trail-map.PNG"
-                    alt=""
-                    class="img-responsive grid-pic-height"
-                  />
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6673.648441464428!2d126.5781651!3d33.2449082!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x350c532d1f34c119%3A0x5c388da469df8b9!2sJeju%20Olle%20Trail%20Course%206!5e0!3m2!1sen!2sus!4v1700093220978!5m2!1sen!2sus"
+                    class="embed"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
                 </div>
               </div>
               <div class="card-body">
