--- a/index.html
+++ b/index.html
@@ -3,18 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Seogwipo - South Korea</title>
+    <title>🇰🇷 Seogwipo - South Korea</title>
     <link rel="stylesheet" href="src/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Hi+Melody&display=swap"
-      rel="stylesheet"
-    />
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap"
-      rel="stylesheet"
+    <meta
+      name="description"
+      content="Learn about the wocderful city of Seogwipo, South Korea!"
     />
   </head>
   <body>
