--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <div class="card-body">
                 <h4>Usaengdang</h4>
                 <p class="sub-title">우생당</p>
-                <p>A playfull yet sleek bookstore with music as well!</p>
+                <p>A playful yet sleek bookstore with music as well!</p>
                 <h5>Address:</h5>
                 <p>104 중앙로 특별자치도 Seogwipo-si, Jeju-do, South Korea</p>
                 <h5>What I like about it:</h5>
@@ -499,7 +499,7 @@
             <h3>About Me</h3>
             <p>
               Hi! My name is Brooklyn and I have always wanted to travel to
-              South Korea. I found Seju Island to be a dream visit and descoverd
+              South Korea. I found Seju Island to be a dream visit and discoverd
               the city of Seogwipo in my search. I created this page as part of
               a project for SheCodes Responsive to develop my coding skills.
             </p>
