--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <h3>Why Seogwipo?</h3>
             <p>
               Seogwipo is known for its delicious cuisines in its coastal town.
-              As it takes you across the verdant forests and dramatic volcanic
-              landscapes. It is home to three awe inspiring waterfalls, plus a
-              stunning coastline filled with rocky coves and bathing pools.
+              It has verdant forests, dramatic volcanic landscapes, and is home
+              to three awe inspiring waterfalls. It also homes a stunning
+              coastline filled with rocky coves and bathing pools.
             </p>
             <p>
               The Seogwipo coast is always busy with fishing boats and is
