--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p>
               Seogwipo is known for its delicious cuisines in its coastal town.
               It has verdant forests, dramatic volcanic landscapes, and is home
-              to three awe inspiring waterfalls. It also homes a stunning
+              to three awe inspiring waterfalls. It also home to a stunning
               coastline filled with rocky coves and bathing pools.
             </p>
             <p>
