updated github link

--- a/index.html
+++ b/index.html
@@ -508,9 +508,7 @@
             <h3>About this website</h3>
             <p>
               This project was coded by Brooklyn Van Bebber and is
-              <a
-                href="https://github.com/ANurfHerder/travel-project"
-                target="_blank"
+              <a href="https://github.com/brooklynvb" target="_blank"
                 >open source.</a
               >
             </p>
